<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>es.upm.fi.oeg</groupId>
  <artifactId>jano</artifactId>
  <version>0.0.1</version>
  <name>Jano</name>
  <description>A maven library for creating json-ld contexts</description>
  
  	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.release>11</maven.compiler.release>
		<slf4jVersion>1.6.1</slf4jVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
  
  
  <dependencies>
  <dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-core</artifactId>
			<version>2.9.3</version>
		</dependency>
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-template-velocity</artifactId>
			<version>2.7.1</version>
		</dependency>
  	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
	<dependency>
	    <groupId>org.apache.jena</groupId>
	    <artifactId>jena-core</artifactId>
	    <version>4.5.0</version>
	</dependency>
	  
	  <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
	<dependency>
	    <groupId>org.apache.jena</groupId>
	    <artifactId>jena-arq</artifactId>
	    <version>4.5.0</version>
	</dependency>
		  <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
	<!-- Loggin -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>${slf4jVersion}</version>
	</dependency>
	<!-- Binding for System.out -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-simple</artifactId>
		<version>${slf4jVersion}</version>
	</dependency>
	<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.javatuples/javatuples -->
	<dependency>
		<groupId>org.javatuples</groupId>
		<artifactId>javatuples</artifactId>
		<version>1.2</version>
	</dependency>

	  <dependency>
		  <groupId>org.projectlombok</groupId>
		  <artifactId>lombok</artifactId>
		  <version>1.18.24</version>
		  <scope>provided</scope>
	  </dependency>
		
  </dependencies>
  
  <dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.8.2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>



	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
		</plugins>
	</build>
  
  
  
</project>